[package]
name = "rt-history"
version = "1.0.0"
edition = "2021"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
rust-version = "1.56.1"
description = "An RT-safe history log with error checking"
repository = "https://github.com/HadrienG2/rt-history"
license = "MPL-2.0"
keywords = [ "wait-free", "real-time", "synchronization", "history", "lock-free" ]
categories = [ "concurrency", "data-structures" ]

[dependencies]
atomic = { version = "0.5", default-features = false }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"
testbench = "0.8"

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false
