[package]
#
# Release checklist:
#
# - Cross-check all public API documentation, update as needed
# - Update changelog
# - Update version number in Cargo.toml
# - Push master, make sure it passes CI
# - Cargo publish
# - Roll an annotated git tag
# - Add a github release
#
name = "rt-history"
version = "4.0.0"
edition = "2021"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
rust-version = "1.74"
description = "An RT-safe history log with error checking"
repository = "https://github.com/HadrienG2/rt-history"
license = "MPL-2.0"
keywords = [ "wait-free", "real-time", "synchronization", "history", "lock-free" ]
categories = [ "concurrency", "data-structures" ]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
atomic = { version = "0.6", default-features = false }
bytemuck = "1.24.0"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
proptest = "1.8"
testbench = "1.0"

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false

[profile.test]
opt-level = 1

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
